workspace-sf/force-app/main/default/objects/TipoRemuneracao_Event__e/TipoRemuneracao_Event__e.object-meta.xml
<CustomObject>
    <label>TipoRemuneracao Event</label>
    <pluralLabel>TipoRemuneracao Events</pluralLabel>
</CustomObject>