workspace-sf/force-app/main/default/objects/TipoRemuneracao_Event__e/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <label>Codigo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>