workspace-sf/force-app/main/default/objects/TipoRemuneracao_Event__e/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <label>Descricao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>