workspace-sf/force-app/main/default/objects/TipoRemuneracao_Event__e/fields/LimiteMaximo__c.field-meta.xml
<CustomField>
    <fullName>LimiteMaximo__c</fullName>
    <label>LimiteMaximo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>