workspace-sf/force-app/main/default/objects/TipoRemuneracao_Event__e/fields/ModeloRecuperacao__c.field-meta.xml
<CustomField>
    <fullName>ModeloRecuperacao__c</fullName>
    <label>ModeloRecuperacao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>